manifests/apps/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: ping-svc
spec:
  selector:
    app: ping-api
  ports:
  - port: 80
    targetPort: 8080
