manifests/apps/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: prod.evil.corp
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ping-svc
            port: 
              number: 80
